<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.wexflow.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnStart"
            android:src="@drawable/ic_action_start"
            android:backgroundTint="@color/button_bg_color"
            />

        <ImageButton
            android:id="@+id/btnSuspend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnSuspend"
            android:src="@drawable/ic_action_suspend"
            android:backgroundTint="@color/button_bg_color"
            />

        <ImageButton
            android:id="@+id/btnResume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnResume"
            android:src="@drawable/ic_action_resume"
            android:backgroundTint="@color/button_bg_color"
            />

        <ImageButton
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnStop"
            android:src="@drawable/ic_action_stop"
            android:backgroundTint="@color/button_bg_color"
            />

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnRefresh"
            android:backgroundTint="@color/button_bg_color"
            android:textColor="@color/button_txt_color"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnApprove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnApprove"
            android:backgroundTint="@color/button_bg_color"
            android:textColor="@color/button_txt_color"
            />
        <Button
            android:id="@+id/btnDisapprove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnDisapprove"
            android:backgroundTint="@color/button_bg_color"
            android:textColor="@color/button_txt_color"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/txtInfo_bg"
        android:textColor="@color/txtInfo_txt_color"
        android:padding="@dimen/txtInfo_margin" />

    <ListView
        android:id="@+id/lvWorkflows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
